# Generated by Django 5.2.9 on 2026-01-15 10:10

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('nbms_app', '0015_reportsectiontemplate_reportsectionresponse'),
    ]

    operations = [
        migrations.CreateModel(
            name='ValidationRuleSet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('code', models.CharField(max_length=100, unique=True)),
                ('applies_to', models.CharField(choices=[('report_type', 'Report type'), ('instance', 'Instance'), ('cycle', 'Cycle')], default='report_type', max_length=20)),
                ('rules_json', models.JSONField(blank=True, default=dict)),
                ('is_active', models.BooleanField(default=True)),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='validation_rule_sets', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'abstract': False,
            },
        ),
    ]
