# Generated by Django 5.2.9 on 2026-01-22 13:48

import django.db.models.deletion
import uuid
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('nbms_app', '0019_sectioniiinationaltargetprogress_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='ReportingSnapshot',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('uuid', models.UUIDField(default=uuid.uuid4, editable=False, unique=True)),
                ('snapshot_type', models.CharField(default='NR7_V2_EXPORT', max_length=50)),
                ('payload_json', models.JSONField()),
                ('payload_hash', models.CharField(max_length=64)),
                ('exporter_schema', models.CharField(max_length=100)),
                ('exporter_version', models.CharField(max_length=50)),
                ('notes', models.TextField(blank=True)),
                ('created_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_reporting_snapshots', to=settings.AUTH_USER_MODEL)),
                ('reporting_instance', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='snapshots', to='nbms_app.reportinginstance')),
            ],
            options={
                'indexes': [models.Index(fields=['reporting_instance', 'created_at'], name='nbms_app_re_reporti_293617_idx'), models.Index(fields=['payload_hash'], name='nbms_app_re_payload_ae2ad5_idx')],
                'constraints': [models.UniqueConstraint(fields=('reporting_instance', 'payload_hash'), name='uq_reporting_snapshot_instance_hash')],
            },
        ),
    ]
